docs/api/qiskit/0.19/ibmq_provider.md
---
title: ibmq
description: API reference for qiskit.providers.ibmq
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.providers.ibmq
---

<span id="module-qiskit.providers.ibmq" />

<span id="qiskit-providers-ibmq" />

# IBM Quantum Provider

<span id="module-qiskit.providers.ibmq" />

`qiskit.providers.ibmq¶`

Modules representing the IBM Quantum Provider.

## Logging

<span id="module-qiskit.providers.ibmq" />

`¶`

The IBM Quantum Provider uses the `qiskit.providers.ibmq` logger.

Two environment variables can be used to control the logging:

> *   `QISKIT_IBMQ_PROVIDER_LOG_LEVEL`: Specifies the log level to use, for the ibmq-provider modules. If an invalid level is set, the log level defaults to `WARNING`. The valid log levels are `DEBUG`, `INFO`, `WARNING`, `ERROR`, and `CRITICAL` (case-insensitive). If the environment variable is not set, then the parent logger’s level is used, which also defaults to `WARNING`.
> *   `QISKIT_IBMQ_PROVIDER_LOG_FILE`: Specifies the name of the log file to use. If specified, messages will be logged to the file only. Otherwise messages will be logged to the standard error (usually the screen).

For more advanced use, you can modify the logger itself. For example, to manually set the level to `WARNING`:

```python
import logging
logging.getLogger('qiskit.providers.ibmq').setLevel(logging.WARNING)
```

## Functions

<span id="module-qiskit.providers.ibmq" />

`¶`

|                                                                                               |                                            |
| --------------------------------------------------------------------------------------------- | ------------------------------------------ |
| [`least_busy`](qiskit.providers.ibmq.least_busy "qiskit.providers.ibmq.least_busy")(backends) | Return the least busy backend from a list. |

## Classes

<span id="module-qiskit.providers.ibmq" />

`¶`

|                                                                                                                                     |                                                                   |
| ----------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------- |
| [`AccountProvider`](qiskit.providers.ibmq.AccountProvider "qiskit.providers.ibmq.AccountProvider")(credentials, access\_token)      | Provider for a single IBM Quantum Experience account.             |
| [`BackendJobLimit`](qiskit.providers.ibmq.BackendJobLimit "qiskit.providers.ibmq.BackendJobLimit")(maximum\_jobs, running\_jobs, …) | Job limit for a backend.                                          |
| [`IBMQBackend`](qiskit.providers.ibmq.IBMQBackend "qiskit.providers.ibmq.IBMQBackend")(configuration, provider, …)                  | Backend class interfacing with an IBM Quantum Experience device.  |
| [`IBMQBackendService`](qiskit.providers.ibmq.IBMQBackendService "qiskit.providers.ibmq.IBMQBackendService")(provider)               | Backend namespace for an IBM Quantum Experience account provider. |
| [`IBMQFactory`](qiskit.providers.ibmq.IBMQFactory "qiskit.providers.ibmq.IBMQFactory")()                                            | Factory and account manager for IBM Quantum Experience.           |

## Exceptions

<span id="module-qiskit.providers.ibmq" />

`¶`

|                                                                                                                                                                           |                                                                     |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------- |
| [`IBMQError`](qiskit.providers.ibmq.IBMQError "qiskit.providers.ibmq.IBMQError")(\*message)                                                                               | Base class for errors raised by the provider modules.               |
| [`IBMQAccountError`](qiskit.providers.ibmq.IBMQAccountError "qiskit.providers.ibmq.IBMQAccountError")(\*message)                                                          | Base class for errors raised by account management.                 |
| [`IBMQAccountCredentialsNotFound`](qiskit.providers.ibmq.IBMQAccountCredentialsNotFound "qiskit.providers.ibmq.IBMQAccountCredentialsNotFound")(\*message)                | Errors raised when credentials are not found.                       |
| [`IBMQAccountCredentialsInvalidFormat`](qiskit.providers.ibmq.IBMQAccountCredentialsInvalidFormat "qiskit.providers.ibmq.IBMQAccountCredentialsInvalidFormat")(\*message) | Errors raised when the credentials format is invalid.               |
| [`IBMQAccountCredentialsInvalidToken`](qiskit.providers.ibmq.IBMQAccountCredentialsInvalidToken "qiskit.providers.ibmq.IBMQAccountCredentialsInvalidToken")(\*message)    | Errors raised when an IBM Quantum Experience token is invalid.      |
| [`IBMQAccountCredentialsInvalidUrl`](qiskit.providers.ibmq.IBMQAccountCredentialsInvalidUrl "qiskit.providers.ibmq.IBMQAccountCredentialsInvalidUrl")(\*message)          | Errors raised when an IBM Quantum Experience URL is invalid.        |
| [`IBMQAccountMultipleCredentialsFound`](qiskit.providers.ibmq.IBMQAccountMultipleCredentialsFound "qiskit.providers.ibmq.IBMQAccountMultipleCredentialsFound")(\*message) | Errors raised when multiple credentials are found.                  |
| [`IBMQBackendError`](qiskit.providers.ibmq.IBMQBackendError "qiskit.providers.ibmq.IBMQBackendError")(\*message)                                                          | Base class for errors raised by the backend modules.                |
| [`IBMQBackendApiError`](qiskit.providers.ibmq.IBMQBackendApiError "qiskit.providers.ibmq.IBMQBackendApiError")(\*message)                                                 | Errors that occur unexpectedly when querying the server.            |
| [`IBMQBackendApiProtocolError`](qiskit.providers.ibmq.IBMQBackendApiProtocolError "qiskit.providers.ibmq.IBMQBackendApiProtocolError")(\*message)                         | Errors raised when an unexpected value is received from the server. |
| [`IBMQBackendValueError`](qiskit.providers.ibmq.IBMQBackendValueError "qiskit.providers.ibmq.IBMQBackendValueError")(\*message)                                           | Value errors raised by the backend modules.                         |
| [`IBMQProviderError`](qiskit.providers.ibmq.IBMQProviderError "qiskit.providers.ibmq.IBMQProviderError")(\*message)                                                       | Errors related to provider handling.                                |

